stream homeWork + example